--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,5 +4,9 @@
         <% if !!@cart %>
           <li> <%= link_to "Cart", cart_path(current_cart) %></li>
         <% end %>
+        <% if !user_signed_in? %>
+          <li> <%= link_to "sign in", new_user_session_path %></li>
+          <li> <%= link_to "Sign up", new_user_registration_path %></li>
+        <% end %>
     </ul>
 </nav>
