--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,9 @@
         <% if !user_signed_in? %>
           <li> <%= link_to "sign in", new_user_session_path %></li>
           <li> <%= link_to "Sign up", new_user_registration_path %></li>
+        <% else %>
+          <li>Signed in as <%= current_user.email%></li>
+          <li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
         <% end %>
     </ul>
 </nav>
