--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,12 @@
 
 <ul>
 <% @category.items.each do |item| %>
-    <li><%= link_to item.title, item_path(item) %> <%= number_to_currency(item.price) %></li>
+    <li><%= link_to item.title, item_path(item) %> <%= "$#{item.price.to_f/100}" %></li>
+
+    <% if user_signed_in? %>
+      <%= button_to 'Add to Cart', {:controller => "line_items", :action => "create", :item_id => item.id } , :method=>:post  %>
+    <% end %>
+
+
 <% end %>
 </ul>
